# DengAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
data/: XGBoost-52features0-lag-1-2-3-1-8-25-withweekofyear-cosine-sine-10:28:17.546587.csv  predictions-Neg-Biominal-baseline-31-7-25-1645-alpha-1e-08.csv  predictions.csv  predictions_2025-08-01 11:21:04.950095-56-features-lag123-cosineweek-saturcomp-temp-comp.csv  predictions_2025-08-01 11:38:39.704342.csv  predictions_2025-08-01 12:05:25.490487-XGBoost-tweeid-maxdepth4-many-features-lag12345-cosine-sine-week.csv
data/archived_predictions/: XGBoost-megafeautes-lag1-2-3-cos-32-7-25-1726.csv  predictions-Neg-Biominal-baseline-31-7-25-1638.csv  predictions_2025-08-01 13:46:47.079597.csv  predictions_30_7_25_1813.csv  predictions_30_7_25_1819.csv
data/predictions/: XGBoost-52features0-lag-1-2-3-1-8-25-10:17.csv  benchmark_xgb-aim-score-25.csv  predictions-1-8-25-0955-XGBoost-no-params.csv  predictions-30-7-25-1935-xg.csv  predictions-XGBoost-no-params-all-the-features-wlagwcosinegrant-salman-31-7-25-1708.csv  predictions-xg-boost-lagged3shift-31-7-25-1409.csv  predictions.csv  predictions_2025-08-01 11:28:27.155340.csv  (+4 more)
notebooks/: data-explore-grant-sj.ipynb  data-explore-grant.ipynb  dengue-benchmark-statsmodels-example.ipynb  salman_dat_explore.ipynb
src/: csv_saver.py  feature_augmentation.py  feature_selector.py  load_data.py  main.py  output_processing.py  predictions.csv  predictions1.csv  preprocess.py  stats_model_wrapper.py  test_main.py
