[project]
name = "dengai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.136.6",
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.3",
]
